--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "rgoralczyk1003-app",
-    "slug": "rgoralczyk1003-app",
+    "name": "DocLexa",
+    "slug": "doclexa",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "rgoralczyk1003app",
+    "scheme": "doclexa",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -24,7 +24,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
+      "expo-document-picker",
+      "expo-image-picker",
       [
         "expo-splash-screen",
         {
@@ -34,9 +35,6 @@
           "backgroundColor": "#ffffff"
         }
       ]
-    ],
-    "experiments": {
-      "typedRoutes": true
-    }
+    ]
   }
 }
