--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "@react-navigation/native": "^7.1.6",
     "@supabase/storage-js": "^2.10.1",
     "@supabase/supabase-js": "^2.50.5",
+    "dotenv": "^17.2.0",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
+    "expo-print": "^14.1.4",
     "expo-router": "~5.1.3",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -41,9 +46,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-document-picker": "~13.1.6",
-    "expo-image-picker": "~16.1.4"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
